--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -40,7 +40,10 @@
       <!-- Font Awesome and Academicons icons / Academic websites -->
       {% if author.arxiv %}
         <li><a href="{{ author.arxiv }}"><i class="ai ai-arxiv ai-fw icon-pad-right"></i>arXiv</a></li>
-      {% endif %}      
+      {% endif %}     
+      {% if author.googlescholar %}
+      <li><a href="{{ author.dblp }}"><i class="ai ai-dblp icon-pad-right"></i>Google Scholar</a></li>
+      {% endif %} 
       {% if author.googlescholar %}
         <li><a href="{{ author.googlescholar }}"><i class="ai ai-google-scholar icon-pad-right"></i>Google Scholar</a></li>
       {% endif %}
