--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -41,7 +41,7 @@
       {% if author.arxiv %}
         <li><a href="{{ author.arxiv }}"><i class="ai ai-arxiv ai-fw icon-pad-right"></i>arXiv</a></li>
       {% endif %}     
-      {% if author.googlescholar %}
+      {% if author.dblp %}
       <li><a href="{{ author.dblp }}"><i class="ai ai-dblp icon-pad-right"></i>Google Scholar</a></li>
       {% endif %} 
       {% if author.googlescholar %}
