--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -42,7 +42,7 @@
         <li><a href="{{ author.arxiv }}"><i class="ai ai-arxiv ai-fw icon-pad-right"></i>arXiv</a></li>
       {% endif %}     
       {% if author.dblp %}
-      <li><a href="{{ author.dblp }}"><i class="ai ai-dblp icon-pad-right"></i>Google Scholar</a></li>
+      <li><a href="{{ author.dblp }}"><i class="ai ai-dblp icon-pad-right"></i>DBLP</a></li>
       {% endif %} 
       {% if author.googlescholar %}
         <li><a href="{{ author.googlescholar }}"><i class="ai ai-google-scholar icon-pad-right"></i>Google Scholar</a></li>
